fix tierlist overflow

--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -65,6 +65,7 @@ body {
 	height: 100%;
 	width: 100%;
 	padding: var(--mainScreenPadding);
+	overflow-y: hidden;
 }
 
 #tierlist-container {
